ghc-4335c07/testsuite/tests/roles/should_compile/T9204b2.hs
module T9204b2 where

import {-# SOURCE #-} T9204b
