ghc-4335c07/testsuite/tests/roles/should_fail/Roles12a.hs
module Roles12a where
import {-# SOURCE #-} Roles12
